Compilers/NeðanSækinÞýðandi/y.output
   0  $accept : start $end

   1  start : program

   2  program : program fundecl
   3          | fundecl

   4  $$1 :

   5  fundecl : $$1 NAME '(' ids ')' '{' VAR idlist ';' '}'

   6  ids :
   7      | ids ',' NAME
   8      | NAME

   9  idlist : idlist ',' NAME
  10         | NAME

state 0
	$accept : . start $end  (0)
	$$1 : .  (4)

	.  reduce 4

	start  goto 1
	program  goto 2
	fundecl  goto 3
	$$1  goto 4


state 1
	$accept : start . $end  (0)

	$end  accept


state 2
	start : program .  (1)
	program : program . fundecl  (2)
	$$1 : .  (4)

	$end  reduce 1
	NAME  reduce 4

	fundecl  goto 5
	$$1  goto 4


state 3
	program : fundecl .  (3)

	.  reduce 3


state 4
	fundecl : $$1 . NAME '(' ids ')' '{' VAR idlist ';' '}'  (5)

	NAME  shift 6
	.  error


state 5
	program : program fundecl .  (2)

	.  reduce 2


state 6
	fundecl : $$1 NAME . '(' ids ')' '{' VAR idlist ';' '}'  (5)

	'('  shift 7
	.  error


state 7
	fundecl : $$1 NAME '(' . ids ')' '{' VAR idlist ';' '}'  (5)
	ids : .  (6)

	NAME  shift 8
	')'  reduce 6
	','  reduce 6

	ids  goto 9


state 8
	ids : NAME .  (8)

	.  reduce 8


state 9
	fundecl : $$1 NAME '(' ids . ')' '{' VAR idlist ';' '}'  (5)
	ids : ids . ',' NAME  (7)

	')'  shift 10
	','  shift 11
	.  error


state 10
	fundecl : $$1 NAME '(' ids ')' . '{' VAR idlist ';' '}'  (5)

	'{'  shift 12
	.  error


state 11
	ids : ids ',' . NAME  (7)

	NAME  shift 13
	.  error


state 12
	fundecl : $$1 NAME '(' ids ')' '{' . VAR idlist ';' '}'  (5)

	VAR  shift 14
	.  error


state 13
	ids : ids ',' NAME .  (7)

	.  reduce 7


state 14
	fundecl : $$1 NAME '(' ids ')' '{' VAR . idlist ';' '}'  (5)

	NAME  shift 15
	.  error

	idlist  goto 16


state 15
	idlist : NAME .  (10)

	.  reduce 10


state 16
	fundecl : $$1 NAME '(' ids ')' '{' VAR idlist . ';' '}'  (5)
	idlist : idlist . ',' NAME  (9)

	';'  shift 17
	','  shift 18
	.  error


state 17
	fundecl : $$1 NAME '(' ids ')' '{' VAR idlist ';' . '}'  (5)

	'}'  shift 19
	.  error


state 18
	idlist : idlist ',' . NAME  (9)

	NAME  shift 20
	.  error


state 19
	fundecl : $$1 NAME '(' ids ')' '{' VAR idlist ';' '}' .  (5)

	.  reduce 5


state 20
	idlist : idlist ',' NAME .  (9)

	.  reduce 9


25 terminals, 7 nonterminals
11 grammar rules, 21 states
